# clippy

./: .gitignore  CMakeLists.txt  README.md  linked_list.c  linked_list.h  main.c
